RESOLVED FIXED 84879
Fix uninitialized variable warnings in PasteboardMac.mm after 115145
https://bugs.webkit.org/show_bug.cgi?id=84879
Summary Fix uninitialized variable warnings in PasteboardMac.mm after 115145
Adam Klein
Reported 2012-04-25 12:05:06 PDT
Fix uninitialized variable warnings in PasteboardMac.mm after 115145
Attachments
Patch (2.20 KB, patch)
2012-04-25 12:05 PDT, Adam Klein
no flags
Adam Klein
Comment 1 2012-04-25 12:05:45 PDT
Enrica Casucci
Comment 2 2012-04-25 14:06:27 PDT
Comment on attachment 138851 [details] Patch My bad.
WebKit Review Bot
Comment 3 2012-04-25 15:32:28 PDT
Comment on attachment 138851 [details] Patch Clearing flags on attachment: 138851 Committed r115249: <http://trac.webkit.org/changeset/115249>
WebKit Review Bot
Comment 4 2012-04-25 15:32:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.