Fix uninitialized variable warnings in PasteboardMac.mm after 115145 https://bugs.webkit.org/show_bug.cgi?id=84879

Reviewed by Enrica Casucci.

* platform/mac/PasteboardMac.mm:
(WebCore::Pasteboard::getDataSelection): Initialize attributedString to nil.
(WebCore::Pasteboard::writeSelectionForTypes): ditto.


Canonical link: https://commits.webkit.org/102401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115249 268f45cc-cd09-0410-ab3c-d52691b4dbfc